# btclib_libsecp256k1

./: .flake8  .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  MANIFEST.in  README.md  benchmark.py  build.py  cffi_abi.py  cffi_api.py  cffi_build.py  ctype.py  hatch_build.py  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py  test.py  tox.ini
.github/scripts/: install-cross-compile-deps.sh  install-macos-deps.sh
.github/workflows/: build.yml  main.yml  test.yml
btclib_libsecp256k1/: __init__.py  dsa.py  mult.py  ssa.py
scripts/: benchmark.py  cffi_build.py  hatch_build.py
tests/: __init__.py
