[project]
name="btclib_libsecp256k1"
version="0.3.0"
description="Simple python bindings to libsecp256k1"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Giacomo Caironi", email = "giacomo.caironi@gmail.com"},
]
keywords=["bitcoin", "libsecp256k1"]
classifiers=[
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Topic :: Security :: Cryptography",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
dependencies = ['cffi>=1.0.0']

[project.urls]
homepage = "https://btclib.org"
documentation = "https://btclib.readthedocs.io/"
repository = "https://github.com/btclib-org/btclib_libsecp256k1"
download = "https://github.com/btclib-org/btclib_libsecp256k1/releases"
changelog = "https://github.com/btclib-org/btclib_libsecp256k1/HISTORY.md"
issues = "https://github.com/btclib-org/btclib_libsecp256k1/issues"
pull_requests = "https://github.com/btclib-org/btclib_libsecp256k1/pulls"

[build-system]
requires = ["hatchling", "cffi>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"
cffi_modules = ["scripts/cffi_build.py:ffi_ext"]

[tool.hatch.envs.dev]
detached = true
dependencies = [
  "isort",
  "black",
  "pre-commit",
  "nox",
  "cibuildwheel"
]

[tool.hatch.envs.dev.scripts]
format = [
    "isort .",
    "black ."
]
pre_commit = [
  "pre-commit run --all-files"
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.mypy]
strict = false
show_column_numbers = true
show_error_codes = true
exclude = [
    "build",
]

[tool.isort]
profile = "black"
skip = ["secp256k1", ".nox"]

[tool.black]
force_exclude = "secp256k1"

[tool.pylint.format]
max-line-length = 130

[tool.pylint.master]
extension-pkg-whitelist="_btclib_libsecp256k1"
min-similarity-lines=6
disable = ["duplicate-code"]  # R0801

[tool.flake8]
max-line-length = 130
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "*egg",
  ".nox",
  "secp256k1",
]
select = ["C", "E", "F", "W", "B"]
# # E203 and W503 are not PEP 8 compliant
ignore = ["E203", "W503"]
# # emit a warning for high McCabe complexity
# # See https://en.wikipedia.org/wiki/Cyclomatic_complexity
max-complexity = 10
per-file-ignores = "__init__.py:F401"

[tool.pytest.ini_options]
python_files = "test*.py"
python_functions = "test*"
norecursedirs = ["secp256k1"]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest {project}/tests/"
build-frontend = "build"
archs = "auto64"
